# product-helper

./: .gitignore  README.md  config.toml  main.py  pyproject.toml  start.sh  stop.sh
app/: chunker.py  config.py  docs_index.py  document_processor.py  embedder.py  llm_service.py  vector_store.py
static/: index.html
